[build-system]
requires = [
    "scikit-build",
    "wheel",
    "numpy",
    "pybind11-stubgen>=2.5",
    "netgen-occt-devel==7.8.1",
    "netgen-occt==7.8.1",
    "packaging",
    "requests",
]

[project]
name = "netgen-mesher"
dynamic = ["version"]
description = "Netgen Mesh Generator"
license = {text = "LGPL-2.1-only"}
requires-python = ">=3.10"
dependencies = ["numpy"]
